--- a/style.css
+++ b/style.css
@@ -78,3 +78,46 @@ ul {
 ul li {
     color: white;
 }
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+}
+
+label {
+    color: white;
+}
+
+input {
+    width: 300px;
+    height: 25px;
+    border-radius: 5px;
+}
+
+textarea {
+    width: 300px;
+    height: 100px;
+}
+
+button {
+    margin: 10px;
+    width: 100px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    background-color: #FF7B00;
+}
+
+button:hover {
+    cursor: pointer;
+}
